--- a/commands.html
+++ b/commands.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
-  <script>
-    Office.onReady(function() {});
-  </script>
 </head>
-<body></body>
+<body>
+</body>
 </html>
